# m2_hmi

./: CMakeLists.txt  LICENSE  README.md  package.xml
modaq_hmi/: hmi_rd.html  style.css
modaq_hmi/js/: chart1.js
modaq_hmi/js/modaq/: chart-mpu6050.js  rosbridge-connect.js  rosbridge-listeners.js  rosbridge-mpu6050-chart.js  rosbridge-mpu6050-node.js
